--- a/API de rede social.csproj
+++ b/API de rede social.csproj
@@ -11,18 +11,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.10">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.23.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="application\api\usecase\" />
-    <Folder Include="domain\entities\" />
     <Folder Include="domain\expection\" />
     <Folder Include="domain\repository\" />
     <Folder Include="domain\ports\" />
     <Folder Include="infraestructure\http\controller\" />
-    <Folder Include="infraestructure\database\" />
     <Folder Include="infraestructure\middleware\" />
     <Folder Include="infraestructure\utils\" />
     <Folder Include="infraestructure\security\" />
